# CustomWidgets

src/: CMakeLists.txt  CustomWidgets_images.qrc  exceptions.cpp  exceptions.h  export.h  project_pch.h
src/ChooseList/: chooselist.cpp  chooselist.h  chooselist.ui
src/ChooseList/priv/: customlistwidgetitem.h
src/ClipRectangle/: ClipRectangle.cpp  ClipRectangle.h  rectgrabber.cpp  rectgrabber.h
src/ConsoleEditor/: consoleeditor.cpp  consoleeditor.h  consoleeditor.ui
src/ConsoleEditor/priv/: customtexteditor.cpp  customtexteditor.h
src/CustomWidgets/: readme.txt
src/CustomWidgets/HtmlEditor/: HtmlEditor.h
src/CustomWidgets/ResizableView/: resizableview.h
src/Dropdown/: dropdown.cpp  dropdown.h  dropdown.ui
src/Dropdown/priv/: dropdownp.cpp  dropdownp.h
src/ExtComboEdit/: extcomboedit.cpp  extcomboedit.h  extcombotype.h
src/GroupComboBox/: groupcombobox.cpp  groupcombobox.h
src/HistoryTextEdit/: customlistwidget.cpp  customlistwidget.h  historytextedit.cpp  historytextedit.h  historytextedit.ui
src/HistoryTextEdit/priv/: combodelegate.cpp  combodelegate.h  listitem.cpp  listitem.h  listitem.ui
src/HtmlEditor/: HtmlEditor.cpp  HtmlEditor.h  HtmlEditorDialog.cpp  HtmlEditorDialog.h  HtmlEditorDialog.ui  htmleditor.ui
src/LastProjectsMenu/: lastprojectsmenu.cpp  lastprojectsmenu.h
src/LogWindow2/: logwindow2.cpp  logwindow2.h  logwindow2.ui
src/LogWindow2/priv/: delegate.cpp  delegate.h  imagelistview.cpp  imagelistview.h  itemsettings.cpp  itemsettings.h  itemsettingseditor.cpp  itemsettingseditor.h  itemsettingseditor.ui  itemsettingsmapeditor.cpp  itemsettingsmapeditor.h  itemsettingsmapeditor.ui  listviewmodel.cpp  listviewmodel.h  logwindow2p.cpp  logwindow2p.h
src/LogWindow2/settings/: layout2.lwbin
src/ManageProjects/: manageprojects.cpp  manageprojects.h  manageprojects.ui
src/MyComboBox/: mycombobox.cpp  mycombobox.h  mycombobox.ui
src/MyLineEdit/: mylineedit.cpp  mylineedit.h
src/ProgressDialog/: progressdialog.cpp  progressdialog.h  progressdialog.ui
src/ResizableView/: resizableview.cpp  resizableview.h  resizableviewdialog.cpp  resizableviewdialog.h  resizableviewdialog.ui
src/RichLabel/: richlabel.cpp  richlabel.h
src/XmlProjectEditor/: varianmapeditor.cpp  varianmapeditor.h  varianmapeditor.ui  xmlitemdelegate.cpp  xmlitemdelegate.h  xmlprojecteditor.cpp  xmlprojecteditor.h  xmlprojecteditor.ui
src/priv/: ConsoleEditorPlugin.cpp  ConsoleEditorPlugin.h  HistoryTextEditPlugin.cpp  HistoryTextEditPlugin.h  HtmlEditorPlugin.cpp  HtmlEditorPlugin.h  chooselistplugin.cpp  chooselistplugin.h  groupcomboboxplugin.cpp  groupcomboboxplugin.h  logwindow2plugin.cpp  logwindow2plugin.h  manageprojectsplugin.cpp  manageprojectsplugin.h  mycomboboxplugin.cpp  mycomboboxplugin.h  mylineeditplugin.cpp  mylineeditplugin.h  plugincollection.cpp  plugincollection.h  resizableviewplugin.cpp  resizableviewplugin.h  richlabelplugin.cpp  richlabelplugin.h  xmlprojecteditorplugin.cpp  xmlprojecteditorplugin.h
src/translate/: customWidgets_en.qm  customWidgets_en.ts  customWidgets_es.qm  customWidgets_es.ts  customWidgets_ru.qm  customWidgets_ru.ts
